gccida/c1/gen_cmpstrsi
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_cmpstrsi/src/insn-emit.c:16162:27: error: use of undeclared identifier 'machine_mode'
v23 = copy_to_mode_reg( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operand1->fld[0].rtx); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_cmpstrsi/src/insn-emit.c:16163:26: error: use of undeclared identifier 'machine_mode'
v8 = copy_to_mode_reg( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operand2->fld[0].rtx); 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_cmpstrsi/src/obj/insn-emit.o] Error 1
